made some progress

--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/wireframe.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
+<header>
+    <h1>Francisco J Gonzalez</h1>
+</header>
+
+<nav>
+    <p>About</p> 
+    <p>Portfolio</p>   
+    <p>Contact</p>
+</nav>
+
 <body>
-    test
+    <div>
+        <section>
+            About me
+        </section>
+        <article>
+            <p>My name is Francisco J Gonzalez.  I was born in Miami 37 years ago.  I have spent half my life between Miami and Madrid.  Today, I am happily married and father of 2 beautiful kids.  I make my living managing an investment fund.  I love learning new things and I hope with time and effort I can become proficcient at programing in several languages and applications.</p>
+
+        </article>
+        <img src="assets/images/profile_picture.jpg" alt="Francisco J Gonzalez">
+
+    </div>
+
+
 </body>
+
+<footer>
+    Copyright ©
+</footer>
+
 </html>
