work done at the office

--- a/index.html
+++ b/index.html
@@ -5,39 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Francisco's Student Portfolio</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<header>
-    <h1>Francisco J Gonzalez</h1>
-</header>
-
-<nav>
-    <p>About</p> 
-    <p>Portfolio</p>   
-    <p>Contact</p>
-</nav>
-
 <body>
-    <div>
-        <section>
-            About me
-        </section>
-        <article>
-            <p>My name is Francisco J Gonzalez.  I was born in Miami 37 years ago.  I have spent half my life between Miami and Madrid.  Today, I am happily married and father of 2 beautiful kids.  I make my living managing an investment fund.  I love learning new things and I hope with time and effort I can become proficcient at programing in several languages and applications.</p>
+    <nav>
+        <div class="my_name"><h1>Francisco J Gonzalez</h1></div>
+        <ul class="sub_nav">
+            <li><a href='index.html'>About</a></li>
+            <li><a href='portfolio.html'>Portfolio</a></li>
+            <li><a href='contact.html'>Contact</a></li>
+        </ul>
+        <div class="floatclear"></div>
+    </nav>
 
-        </article>
-        <img src="assets/images/profile_picture.jpg" alt="Francisco J Gonzalez">
-
+    <div class="body_container">
+        <div class="page_content">
+            <div class="page_title">
+                <h1>About me</h1>
+            </div>
+            <div class = "page_items clearfix" > 
+                <img class= "profile_picture left" src="assets/images/profile_picture.jpg" alt="Francisco J Gonzalez"> 
+                <p class = left> My name is Francisco J Gonzalez.  I was born in Miami 37 years ago.  I have lived half my life in Madrid and the other half in Miami.  Today, I am happily married and father of 2 beautiful children.  I make my living managing an investment fund a founded with a friend of mine 10 years ago.  I love learning new things and programing is my new adventure.  This page is my very first project and I am going to use it to showcase future projects. </p>
+  
+       
+            </div>
+        </div>
     </div>
 
+    <footer>
+        Copyright ©
+    </footer>
 
 </body>
-
-<footer>
-    Copyright ©
-</footer>
-
 </html>
