update to files

--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,25 @@
             <div class="page_title">
                 <h1>Contact</h1>
             </div>
-            <div class = "page_items clearfix" > 
-   
-        
+            <div class = "page_items clearfix" >                   
+                <form>
+                <section class="legend_form">
+                    <label for="name">Name</label>
+                    <br>
+                    <input type="text" name="name" id="name" placeholder=  "John Doe" style="width: 100%">
+                </section>
+                <section class="legend_form">
+                    <label for="email">Email</label>
+                    <br>
+                    <input type="text" name="email" id="email" placeholder="youremail@domain.com" style="width :100%">
+                </section>
+                <section class="legend_form">
+                    <label for="message">Message</label>
+                    <br>
+                    <textarea name="message" id="message" rows=10 style="width: 100%"  ></textarea>
+                </section>
+                <button type="button">Submit</button>
+            </form>
             </div>
         </div>
     </div>
