--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Francisco's Student Portfolio</title>
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    
+    <nav>
+        <div class="my_name"><h1>Francisco J Gonzalez</h1></div>
+        <ul class="sub_nav">
+            <li><a href='index.html'>About</a></li>
+            <li><a href='portfolio.html'>Portfolio</a></li>
+            <li><a href='contact.html'>Contact</a></li>
+        </ul>
+        <div class="floatclear"></div>
+    </nav>
+
+    <div class="body_container">
+        <div class="page_content">
+            <div class="page_title">
+                <h1>Portfolio</h1>
+           
+        </div>
+    </div>
+
+    <footer>
+        Copyright ©
+    </footer>
+
 </body>
 </html>
